# webserver-c

./: CMakeLists.txt  compile_commands.json  flake.nix  run.sh
.cache/clangd/index/: main.c.1AE797396874AF24.idx  mongoose.c.F6D9C9493406E64C.idx  mongoose.h.E521D14E78FB837B.idx
include/: mongoose.c
lib/: mongoose.h
src/: board.c  board.h  constants.h  main.c  pin_modes.c  pin_modes.h  utils.c  utils.h  webserver.c  webserver.h
src/pages/config/: config.css  config.html  config.js  modes.json
